--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>KRISHHH DEVIL</title>
+  <title>Krishna CV</title>
   <style media="screen">
   body {
     background-color: #eaeaea;
