--- a/submit.html
+++ b/submit.html
@@ -27,6 +27,7 @@
       <label for="">Upload Your Resume</label>
       <input type="file" name="" value=""><br>
       <input type="submit" name="">
+      <input type="reset" name="">
     </form>
 
   </body>
